[gd_scene load_steps=10 format=3 uid="uid://6jcoa40tm8f6"]

[ext_resource type="Theme" uid="uid://ccxq1ecn67rk" path="res://Assets/end_day.tres" id="1_3lmyd"]
[ext_resource type="Script" path="res://endGame.gd" id="2_ekh4y"]
[ext_resource type="FontFile" uid="uid://d4gloc7rb6s5s" path="res://Assets/Font/vinque rg.otf" id="3_no0yc"]
[ext_resource type="Texture2D" uid="uid://dqs8l8yjjil2j" path="res://Assets/Shareef/MomoStart.png" id="4_uns1y"]
[ext_resource type="AudioStream" uid="uid://6qiebnhmj46y" path="res://Assets/Sounds/aidan1.mp3" id="6_0408j"]
[ext_resource type="AudioStream" uid="uid://bsv436vlcuyea" path="res://Assets/Sounds/Audacity/blacksmith3.mp3" id="6_mcyl8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f2n57"]
atlas = ExtResource("4_uns1y")
region = Rect2(400, 200, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_jnv8r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2n57")
}],
"loop": true,
"name": &"Menu",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_3m3qv"]
font_size = 33
font_color = Color(0, 0, 0, 1)

[node name="EndGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3lmyd")
script = ExtResource("2_ekh4y")

[node name="Lemur" type="AnimatedSprite2D" parent="."]
position = Vector2(971, 503)
scale = Vector2(2.25, 2.267)
sprite_frames = SubResource("SpriteFrames_jnv8r")
animation = &"Menu"

[node name="GameTitle" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 13.0
offset_right = 290.0
offset_bottom = 165.0
theme = ExtResource("1_3lmyd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_no0yc")
theme_override_font_sizes/normal_font_size = 48
text = "Congrats!
It's Over"

[node name="VersionCode" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 617.0
offset_right = 44.0
offset_bottom = 657.0
theme_override_fonts/normal_font = ExtResource("3_no0yc")
text = "v1.0"

[node name="Thwak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mcyl8")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 194.0
offset_right = 264.0
offset_bottom = 243.0
placeholder_text = "Enter Name"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 262.0
offset_right = 244.0
offset_bottom = 321.0
text = "Score:"
label_settings = SubResource("LabelSettings_3m3qv")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 326.0
offset_right = 230.0
offset_bottom = 397.0
text = "Submit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 287.0
offset_top = 19.0
offset_right = 780.0
offset_bottom = 393.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Highscores"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0408j")
pitch_scale = 0.95

[node name="Player Score" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 516.0
offset_right = 251.0
offset_bottom = 575.0
text = "Place"

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 400.0
offset_right = 202.0
offset_bottom = 475.0
text = "Menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
